# assistantGPT

./: .gitignore  README.md  caseIdentifier.py  chainlit.md  constants.py  jira.py  jira_constants.py  jira_main.py  main.py  pyproject.toml  requirements.txt
.chainlit/: .langchain.db
chatbot/: app.py
chatbot/utils/: __init__.py
utils/: githubOperations.py
