[tool.poetry]
name = "babyagi-llama-test"
version = "0.1.0"
description = ""
authors = ["AshwinManohar <ashwin.manohar@tifin.com>"]
readme = "README.md"
packages = [{include = "babyagi_llama_test"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
huggingface-hub = "^0.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
